quiz getters api
