# backend/dto/quiz_request.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateQuizRequest struct {
+	Title       string `json:"title" binding:"required"`
+	Description string `json:"description"`
+}
